src/snapshots/rlox__test_runtime__escaping_argument.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(\"\n        fun outer(n) {\n            fun inner() {\n                print n;\n            }\n            return inner;\n        }\n        var filler1 = 0;\n        var filler2 = 0;\n        var filler3 = 0;\n        var filler4 = 0;\n        outer(1)();\n        \")"
---
stdout:
1


stderr:


